<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/bg_app"
    tools:context=".Home">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/text_app"
            android:text="@string/dashboard" />

        <Button
            android:id="@+id/btnFilm"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="60dp"
            android:background="#00FF00"
            android:onClick="gotoFilm"
            android:text="@string/film" />
        <Button
            android:id="@+id/btnSetting"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:background="#FF00FF"
            android:onClick="gotoSetting"
            android:text="@string/setting" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>